# mwwolf

./: .gitignore  .lintstagedrc.json  LICENSE  README.md  package-lock.json  package.json  pre-push_conf
.github/workflows/: lint_and_test.yaml
.husky/: pre-push
backend/: Cargo.toml
backend/crates/v1/application/cloudrun/: Cargo.toml
backend/crates/v1/application/generate_graphql_schema/: Cargo.toml
backend/crates/v1/application/generate_graphql_schema/src/: main.rs
backend/crates/v1/application/local/: Cargo.toml
backend/crates/v1/application/local/src/: main.rs
backend/crates/v1/di/: Cargo.toml
backend/crates/v1/di/src/: cloudrun.rs  lib.rs  usecase_injector.rs
backend/crates/v1/di/src/repository/: datastore.rs
backend/crates/v1/domain/: Cargo.toml
backend/crates/v1/domain/src/: error.rs  id.rs  lib.rs  project.rs  result.rs
backend/crates/v1/infrastructure/: Cargo.toml  build.rs
backend/crates/v1/infrastructure/src/: lib.rs
backend/crates/v1/infrastructure/src/datastore/: id.rs  mod.rs  project.rs
backend/crates/v1/infrastructure/src/datastore/proto_api/: authorize.rs  client.rs  entity.rs  error.rs  key.rs  mod.rs  query.rs  value.rs
backend/crates/v1/libmww/: Cargo.toml
backend/crates/v1/libmww/src/: database.rs  id.rs  lib.rs
backend/crates/v1/presentation/graphql/: Cargo.toml
backend/crates/v1/presentation/graphql/src/: lib.rs  project.rs
backend/crates/v1/testmww/: Cargo.toml
backend/crates/v1/testmww/src/: integration_project_test.rs  integration_test.rs  lib.rs
backend/crates/v1/usecase/: Cargo.toml
backend/crates/v1/usecase/src/: error.rs  lib.rs  project.rs
backend/crates/v1/usecase/tests/: project.rs
backend/crates/v1/usecase/tests/fixtures/sql/project/get_project/: basic_pattern.sql
dockers/datastore/: Dockerfile
dockers/rust_test/: Dockerfile
frontend/: Cargo.toml
frontend/crates/api_client/graphql_api_client/: Cargo.toml
frontend/crates/api_client/graphql_api_client/src/: lib.rs
frontend/crates/application/yewmww/: Cargo.toml  README.md  index.html  index.ts
frontend/crates/application/yewmww/query/: query.graphql
frontend/crates/application/yewmww/src/: main.rs
migrations/: 20210516113649_project.up.sql
schema/graphql/: api.graphql
scripts/: env.sh  run_database.sh
scripts/git/hooks/pre-commit/: fmt_rust.sh
scripts/git/hooks/pre-push/: check_pre-push-hook.sh  lint_rust.sh
scripts/git/hooks/prepare-commit-msg/: message.sh  message_template.txt
scripts/git/hooks/utils/: runner.sh
scripts/lint/: lint_rust.sh  lint_rust_ci.sh  lint_rust_partial.sh
scripts/test/: test_rust.sh  test_rust_partial.sh
