[package]
name = "testmww"
version = "0.1.0"
authors = ["qwerty2501 <939468+qwerty2501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
uuid = { version = "0.8", features = ["v4"] }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
libmww = { path = "../libmww" }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
