[package]
name = "usecase"
version = "0.1.0"
authors = ["ryutah <6662577+ryutah@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 
[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
libmww = { path = "../libmww" }
domain = { path = "../domain" }
anyhow = "1.0.40"
derive-new = "0.5.9"
thiserror = "1.0.24"

[dev-dependencies]
infrastructure = { path = "../infrastructure" }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
test-case = "1.1.0"
testmww = { path = "../testmww" }
di = { path = "../di" }
