[package]
name = "local"
version = "0.1.0"
authors = ["ryutah <6662577+ryutah@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git", branch = "actix-web-v4-beta" }
async-graphql-actix-web = { git = "https://github.com/async-graphql/async-graphql.git", branch = "actix-web-v4-beta" }
futures-channel = { version = "0.3.5", default-features = false, features = ["sink", "alloc", "std"] }
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
graphql = { path = "../../presentation/graphql" }
di = { path = "../../di", features = ["local"] }
actix-cors = "0.6.0-beta.1"
env_logger = "0.8.4"
